--- a/linda.html
+++ b/linda.html
@@ -72,7 +72,7 @@
 
     <div class="gallery">
       <!-- Substitua com fotos de vocês dois se quiser -->
-      <img src="WhatsApp Image 2025-06-12 at 00.09.12.jpeg" alt="Imagem romântica 1">
+      <img src="https://source.unsplash.com/250x250/?love,couple" alt="Imagem romântica 1">
       <img src="https://source.unsplash.com/250x250/?romance,flowers" alt="Imagem romântica 2">
       <img src="https://source.unsplash.com/250x250/?hearts,valentine" alt="Imagem romântica 3">
     </div>
