--- a/linda.html
+++ b/linda.html
@@ -4,61 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Feliz Dia dos Namorados, Karol! 💘</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #ff9a9e, #fad0c4);
-      color: #fff;
-      text-align: center;
-    }
-    .container {
-      padding: 50px 20px;
-    }
-    h1 {
-      font-size: 3em;
-      margin-bottom: 0.5em;
-    }
-    p {
-      font-size: 1.3em;
-      max-width: 700px;
-      margin: auto;
-    }
-    .heart {
-      font-size: 5em;
-      animation: pulse 1s infinite;
-    }
-    @keyframes pulse {
-      0%, 100% {
-        transform: scale(1);
-        color: #ff6f91;
-      }
-      50% {
-        transform: scale(1.1);
-        color: #ff3e55;
-      }
-    }
-    .gallery {
-      margin-top: 40px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-    }
-    .gallery img {
-      border-radius: 15px;
-      width: 250px;
-      height: 250px;
-      object-fit: cover;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-    }
-    footer {
-      margin-top: 60px;
-      font-size: 1em;
-      color: #fff;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
