--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- Substitua com fotos de vocês dois se quiser -->
       <img src="WhatsApp Image 2025-06-12 at 00.09.12.jpeg" alt="Imagem romântica 1">
       <img src="WhatsApp Image 2025-06-12 at 00.09.13 (2).jpeg" alt="Imagem romântica 2">
-      <img src="https://source.unsplash.com/250x250/?hearts,valentine" alt="Imagem romântica 3">
+      <img src="WhatsApp Image 2025-06-12 at 00.09.13.jpeg" alt="Imagem romântica 3">
     </div>
 
     <footer>
